--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=eureka-service
-spring.config.import=configserver:http://config-server-service:8088
+spring.config.import=config-service:http://localhost:8088
 spring.cloud.config.enabled=true
