--- a/ms-booking/src/main/resources/application.properties
+++ b/ms-booking/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ms-booking
-spring.cloud.config.uri=http://localhost:8088
+#spring.cloud.config.uri=http://localhost:8888
+spring.config.import=configserver:http://localhost:8888
 spring.cloud.config.enabled=true
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
