--- a/config-data/ms-discounts2.yaml
+++ b/config-data/ms-discounts2.yaml
@@ -1,5 +1,8 @@
 server:
   port: 8003
+spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 eureka:
   instance:
     preferIpAddress: true
