--- a/config-data/ms-reports.yaml
+++ b/config-data/ms-reports.yaml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USER}
+    username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
   jpa:
     hibernate:
