--- a/ms-rack/src/main/resources/application.properties
+++ b/ms-rack/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=ms-rack
-spring.cloud.config.uri=http://localhost:8088
+spring.config.import=configserver:http://localhost:8888
 spring.cloud.config.enabled=true
