--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -8,6 +8,7 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+      # defaultZone: http://eureka-service-service:8761/eureka/
 spring:
   cloud:
     gateway:
