--- a/config-data/ms-discounts2.yaml
+++ b/config-data/ms-discounts2.yaml
@@ -11,3 +11,4 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+      # defaultZone: http://eureka-service-service:8761/eureka/
