--- a/config-data/ms-reports.yaml
+++ b/config-data/ms-reports.yaml
@@ -12,3 +12,4 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+      # defaultZone: http://eureka-service-service:8761/eureka/
