--- a/deployment/karting-frontend-deployment.yaml
+++ b/deployment/karting-frontend-deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: karting-frontend-deployment
+  name: karting2-frontend-deployment
   labels:
-    app: karting-frontend-deployment
+    app: karting2-frontend-deployment
 spec:
   selector:
     matchLabels:
-      app: karting-frontend-deployment
+      app: karting2-frontend-deployment
   replicas: 1
   template:
     metadata:
       labels:
-        app: karting-frontend-deployment
+        app: karting2-frontend-deployment
     spec:
       containers:
-        - name: karting-frontend-container
-          image: calpz/karting-frontend-image
+        - name: karting2-frontend-container
+          image: calpz/karting2-frontend-image
           ports:
             - containerPort: 3000
 
@@ -24,12 +24,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: karting-frontend-service
+  name: karting2-frontend-service
   labels:
-    app: karting-frontend
+    app: karting2-frontend
 spec:
   selector:
-    app: karting-frontend-deployment
+    app: karting2-frontend-deployment
   ports:
     - protocol: TCP
       port: 3000
