Se añade comando
para bajar nuevamente la imagen
imagePullPolicy: Always

--- a/deployment/eureka-service-deployment.yaml
+++ b/deployment/eureka-service-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: eureka-service
           image: calpz/eureka-service-image
+          imagePullPolicy: Always
           ports:
             - containerPort: 8761
 ---
