--- a/deployment/ms-reports-deployment.yaml
+++ b/deployment/ms-reports-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: ms-reports
           image: calpz/ms-reports-image
+          imagePullPolicy: Always
           ports:
             - containerPort: 8006
           env:
