--- a/ms-booking/src/main/resources/application.properties
+++ b/ms-booking/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=ms-booking
-#spring.cloud.config.uri=http://localhost:8888
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=configserver:http://eureka-service-service:8888
 spring.cloud.config.enabled=true
 
 spring.mail.host=smtp.gmail.com
