--- a/config-data/eureka-service.yaml
+++ b/config-data/eureka-service.yaml
@@ -6,4 +6,4 @@ eureka:
     register-with-eureka: false
     service-url:
       #default-zone: http://localhost:8761/eureka
-      default-zone: http://eureka-service-service:8761/eureka/
+      default-zone: http://eureka-service-service:8761/eureka
