--- a/karting2Frontend/Dockerfile
+++ b/karting2Frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:stable-alpine
 
-COPY  /dist /usr/share/nginx/html
-COPY /nginx/conf.d /etc/nginx/conf.d
+COPY dist/ /usr/share/nginx/html
+COPY nginx/conf.d/ /etc/nginx/conf.d/
 
 EXPOSE 3000
 
