--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -2,7 +2,7 @@ server:
   port: 8080
 eureka:
   instance:
-    hostname: localhost
+    preferIpAddress: true
   client:
     fetch-registry: true
     register-with-eureka: true
