--- a/config-data/ms-discounts2.yaml
+++ b/config-data/ms-discounts2.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8003
+  port: ${SERVER_PORT}
 spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
