--- a/config-data/ms-rates.yaml
+++ b/config-data/ms-rates.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8005
+  port: ${SERVER_PORT}
 spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
