--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -20,6 +20,7 @@ spring:
             allowedOrigins: '*'
             allowedMethods: "*"
             allowedHeaders: "*"
+            allowCredentials: true
       routes:
         - id: ms-booking
           uri: lb://ms-booking
