--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -17,6 +17,7 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
+            allowedOriginPatterns: "*"
             allowedOrigins: '*'
             allowedMethods: "*"
             allowedHeaders: "*"
