--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -14,45 +14,43 @@ spring:
       discovery:
         locator:
           enabled: true
+          lower-case-service-id: true
       globalcors:
         cors-configurations:
           '[/**]':
-            allowedOriginPatterns: "*"
-            allowedOrigins: '*'
+            allowedOriginPatterns:
+              - "http://127.0.0.1:*"
+              - "http://localhost:*"
+              - "http://192.168..:*"
             allowedMethods: "*"
             allowedHeaders: "*"
             allowCredentials: true
+            maxAge: 3600
       routes:
         - id: ms-booking
           uri: lb://ms-booking
           predicates:
             - Path=/booking/**
-
         - id: ms-discounts1
           uri: lb://ms-discounts1
           predicates:
             - Path=/discounts1/**
-
         - id: ms-discounts2
           uri: lb://ms-discounts2
           predicates:
             - Path=/discounts2/**
-
         - id: ms-rack
           uri: lb://ms-rack
           predicates:
             - Path=/rack/**
-
         - id: ms-rates
           uri: lb://ms-rates
           predicates:
             - Path=/rates/**
-
         - id: ms-reports
           uri: lb://ms-reports
           predicates:
             - Path=/reports/**
-
         - id: ms-special-rates
           uri: lb://ms-special-rates
           predicates:
