Agregar servicios a ms

--- a/deployment/karting2-frontend-deployment.yaml
+++ b/deployment/karting2-frontend-deployment.yaml
@@ -26,7 +26,7 @@ kind: Service
 metadata:
   name: karting2-frontend-service
   labels:
-    app: karting2-frontend
+    app: karting2-frontend-service
 spec:
   selector:
     app: karting2-frontend-deployment
@@ -34,4 +34,4 @@ spec:
     - protocol: TCP
       port: 3000
       targetPort: 3000
-  type: LoadBalancer
+  type: ClusterIP
