--- a/deployment/ms-booking-deployment.yaml
+++ b/deployment/ms-booking-deployment.yaml
@@ -49,3 +49,18 @@ spec:
                 secretKeyRef:
                   name: postgres-credentials
                   key: DB_PASSWORD_BOOKING
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ms-booking-service
+  labels:
+    app: ms-booking-service
+spec:
+  selector:
+    app: ms-booking-deployment
+  ports:
+    - protocol: TCP
+      port: 8090
+      targetPort: 8090
+  type: ClusterIP
