--- a/deployment/ms-discounts2-deployment.yaml
+++ b/deployment/ms-discounts2-deployment.yaml
@@ -23,3 +23,18 @@ spec:
           env:
             - name: SERVER_PORT
               value: "0"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ms-discounts2-service
+  labels:
+    app: ms-discounts2-service
+spec:
+  selector:
+    app: ms-discounts2-deployment
+  ports:
+    - protocol: TCP
+      port: 8090
+      targetPort: 8090
+  type: ClusterIP
