--- a/deployment/ms-rack-deployment.yaml
+++ b/deployment/ms-rack-deployment.yaml
@@ -49,3 +49,18 @@ spec:
                 secretKeyRef:
                   name: postgres-credentials
                   key: DB_PASSWORD_RACK
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ms-rack-service
+  labels:
+    app: ms-rack-service
+spec:
+  selector:
+    app: ms-rack-deployment
+  ports:
+    - protocol: TCP
+      port: 8090
+      targetPort: 8090
+  type: ClusterIP
