--- a/ms-rack/Dockerfile
+++ b/ms-rack/Dockerfile
@@ -1,4 +1,27 @@
-FROM openjdk:17
-ARG JAR_FILE=./target/*.jar
-COPY ${JAR_FILE} ms-rack.jar
-ENTRYPOINT ["java","-jar","/ms-rack.jar"]
+# Build stage
+FROM maven:3.9-eclipse-temurin-17 AS builder
+
+WORKDIR /app
+
+COPY pom.xml .
+COPY .mvn .mvn
+COPY mvnw .
+
+RUN mvn dependency:go-offline -B
+
+COPY src src
+RUN mvn clean package -DskipTests
+
+FROM eclipse-temurin:17-jre
+
+WORKDIR /app
+
+COPY --from=builder /app/target/*.jar app.jar
+#ENV TZ=America/Santiago
+
+# Run application
+ENTRYPOINT ["java", \
+    "-XX:+UseContainerSupport", \
+    "-XX:MaxRAMPercentage=75.0", \
+    "-jar", \
+    "app.jar"]
